Update build scripts.